# hospital_client

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  TODO  dockerfile  main.py  output.txt  pyproject.toml  server.py
hospital_client/: constant.py  doc_monitoring_agent.py  emailer.py  logger_config.py  pdf_generator.py  recorder.py  summarizer.py  transcriber.py
