[tool.poetry]
name = "hospital-client"
version = "0.1.0"
description = ""
authors = ["Mayuresh Anand <56501614+mayureshucsb2019@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "hospital_client"}]
license = "MIT"
homepage = "https://github.com/mayureshucsb2019/hospital_client"
repository = "https://github.com/mayureshucsb2019/hospital_client"
keywords = ["hospital", "client", "healthcare"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pyaudio = ">=0.2.14,<0.3.0"
sounddevice = ">=0.5.1,<0.6.0"
scipy = ">=1.15.2,<2.0.0"
assemblyai = ">=0.37.0,<0.38.0"
python-dotenv = ">=1.1.0,<2.0.0"
google = ">=3.0.0,<4.0.0"
google-generativeai = ">=0.8.4,<0.9.0"
pdfkit = ">=1.0.0,<2.0.0"
markdown = ">=3.7,<4.0"
wkhtmltopdf = ">=0.2,<0.3"
weasyprint = ">=65.0,<66.0"
pyannote-audio = ">=3.3.2,<4.0.0"
transformers = ">=4.51.1,<5.0.0"
isort = ">=6.0.1,<7.0.0"
autoflake = ">=2.3.1,<3.0.0"
pypdf2 = ">=3.0.1,<4.0.0"
uvicorn = ">=0.34.0,<0.35.0"
fastapi = ">=0.115.12,<0.116.0"
python-multipart = ">=0.0.20,<0.0.21"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
black = "^25.1.0"
flake8 = "^7.2.0"
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
